removed zoom effect from post lists, buggy with chrome browser that causes blurry effect

--- a/base/static/base/css/posts_list.css
+++ b/base/static/base/css/posts_list.css
@@ -1,17 +1,3 @@
-.zoom-105 {
-  transition: transform .2s;
-  z-index: 1;
-  position: relative;
-  -webkit-backface-visibility: hidden; 
-  -ms-transform: translateZ(0); /* IE 9 */
-  -webkit-transform: translateZ(0); /* Chrome, Safari, Opera */
-  transform: translateZ(0);
-}
-
-.zoom-105:hover {
-  transform: scale(1.015);
-}
-
 .box {
   box-shadow: 0 3px 5px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
